add structure logging
