# cmd/api/users.go
@@ -7,7 +7,7 @@ import (
 	"github.com/go-chi/chi/v5"
 	"github.com/lib/pq"
 	db "github.com/trenchesdeveloper/social-blue/internal/db/sqlc"
-	"log"
+	"github.com/trenchesdeveloper/social-blue/internal/dto"
 	"net/http"
 	"strconv"
 )
@@ -16,22 +16,61 @@ type UserContextKey string
 
 const userKey UserContextKey = "user"
 
+// GetUser godoc
+//
+//	@Summary		Get a user
+//	@Description	Get a user by ID
+//	@ID				get-user
+//	@Produce		json
+//	@Param			userID	path		int	true	"User ID"
+//	@Success		200		{object}	dto.UserResponseDto
+//	@Failure		400		{object}	error
+//	@Failure		404		{object}	error
+//	@Failure		500		{object}	error
+//	@Router			/users/{userID} [get]
 func (s *server) getUserHandler(w http.ResponseWriter, r *http.Request) {
 	// get the user from the context
 	user, err := s.getUserFromContext(r.Context())
 	if err != nil {
+		if errors.Is(err, sql.ErrNoRows) {
+			s.notFoundError(w, r)
+			return
+		}
 		s.internalServerError(w, r, err)
 		return
 	}
 
+	userResponse := dto.UserResponseDto{
+		ID:        user.ID,
+		Username:  user.Username,
+		Email:     user.Email,
+		FirstName: user.FirstName,
+		LastName:  user.LastName,
+	}
+
 	// return the user
-	jsonRespose(w, http.StatusOK, user)
+	jsonRespose(w, http.StatusOK, userResponse)
 }
 
 type FollowUser struct {
 	UserID int64 `json:"user_id"`
 }
 
+// FollowUser godoc
+//
+//	@Summary		Follow a user
+//	@Description	Follow a user by ID
+//	@ID				follow-user
+//	@Produce		json
+//	@Param			userID	path		int	true	"User ID"
+//	@Success		200		{object}	db.GetUserByIDRow
+//	@Failure		400		{object}	error
+//	@Failure		404		{object}	error
+//	@Failure		500		{object}	error
+//
+//	@Security		ApiKeyAuth
+//
+//	@Router			/users/{userID}/follow [put]
 func (s *server) followUserHandler(w http.ResponseWriter, r *http.Request) {
 	// get the user from the context
 	followerUser, err := s.getUserFromContext(r.Context())
@@ -52,7 +91,7 @@ func (s *server) followUserHandler(w http.ResponseWriter, r *http.Request) {
 	})
 
 	if err != nil {
-		log.Println(err)
+		s.logger.Info(err)
 		if pqError, ok := err.(*pq.Error); ok && pqError.Code == "23505" {
 			s.badRequestError(w, r, errors.New("user already followed"))
 			return
@@ -67,6 +106,7 @@ func (s *server) followUserHandler(w http.ResponseWriter, r *http.Request) {
 
 func (s *server) unfollowUserHandler(w http.ResponseWriter, r *http.Request) {
 	// get the user from the context
+
 	followerUser, err := s.getUserFromContext(r.Context())
 	if err != nil {
 		s.internalServerError(w, r, err)
@@ -85,7 +125,7 @@ func (s *server) unfollowUserHandler(w http.ResponseWriter, r *http.Request) {
 	})
 
 	if err != nil {
-		log.Println(err)
+		s.logger.Info(err)
 		s.internalServerError(w, r, err)
 		return
 	}
@@ -106,6 +146,7 @@ func (s *server) userContextMiddleware(next http.Handler) http.Handler {
 		if err != nil {
 			if errors.Is(err, sql.ErrNoRows) {
 				s.notFoundError(w, r)
+				return
 			}
 			s.internalServerError(w, r, err)
 			return
