# internal/dto/userDto.go
@@ -1,0 +1,9 @@
+package dto
+
+type UserResponseDto struct {
+	ID        int64  `json:"id"`
+	Username  string `json:"username"`
+	Email     string `json:"email"`
+	FirstName string `json:"first_name"`
+	LastName  string `json:"last_name"`
+}
